# hex-study

./: Cargo.toml
assets/shaders/: lighting.frag  lighting.vert  standard.vert
assets/textures/tiles/: something.aseprite
concept/: spells.md
src/: boilerplates.rs  controls.rs  main.rs
src/assets/: mod.rs
src/modes/: mod.rs
src/modes/logo/: mod.rs
src/modes/overworld/: damage.rs  mod.rs  physics.rs
src/modes/overworld/cs/: classes.rs  colored_box.rs  damage.rs  dazing.rs  debug.rs  explosions.rs  light.rs  limited_time_offer.rs  mod.rs  particles.rs  physics.rs  player.rs  projectiles.rs  shrine.rs
src/modes/overworld/procgen/: methods.txt  mod.rs
src/modes/overworld/spells/: casting.rs  componentinators.rs  data.rs  mod.rs  patterns.rs
src/utils/: draw.rs
src/utils/text/: billboard.rs
