[package]
name = "omegaquad"
version = "0.1.0"
authors = ["gamma-delta <29877714+gamma-delta@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.6"
cogs-gamedev = "*"
quad-wasmnastics = "*"

hecs = "0.5.2"
rapier2d = { version = "0.9.2", features = ["simd-nightly"] }
nalgebra = { version = "*", features = ["convert-glam014"] }

rand = { version = "0.8.3" }
quad-rand = { version = "0.2.1", features = ["rand"] }
getrandom = { version = "0.2.2", features = ["custom"] }

enum-map = "1.0.0"
once_cell = "1.7.2"
crossbeam = { version = "0.8.0", optional = true }
bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] }
anyhow = "1.0.40"
regex = "1.5.4"
smallvec = "1.6.1"
hex2d = "1.0.0"
strum = "0.21.0"
strum_macros = "0.21.1"
ahash = "0.7.4"
smallset = "0.1.1"
paste = "1.0.5"
macroquad-particles = "0.1.1"
rand_distr = "0.4.1"
rand_xoshiro = "0.6.0"
noise = "0.7.0"

[features]
default = ["thread_loop"]

thread_loop = ["crossbeam"]

[profile.dev.package.'*']
opt-level = 3


[patch.crates-io]
# Make particles stop flickering back into existence
miniquad = { git = "https://github.com/vaalha/miniquad" }
